--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".Activity.LoginActivity" />
         <activity android:name=".Activity.AppbarActivity" />
         <activity
-            android:name=".Activity.WelcomeActivity"
+            android:name=".Activity.MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -32,10 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.MainActivity" />
+        <activity android:name=".Activity.WelcomeActivity" />
         <activity android:name=".Activity.ProfileActivity" />
         <activity android:name=".Activity.ContactActivity" />
-        <activity android:name=".Activity.SettingActivity" />
     </application>
 
 </manifest>
