--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".Activity.MyApp"
@@ -17,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Activity.ChatActivity"
+            android:parentActivityName=".Activity.MainActivity"></activity>
+
+        <activity android:name=".Activity.FriendProfileActivity"
+            android:parentActivityName=".Activity.MainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -40,9 +46,15 @@
         <activity android:name=".Activity.WelcomeActivity" />
         <activity android:name=".Activity.ImageSlideShow2Activity" />
         <activity android:name=".Activity.UserLocationActivity" />
-        <activity android:name=".Activity.ProfileActivity" />
-        <activity android:name=".Activity.FindFriendActivity"
-            android:parentActivityName=".Activity.MainActivity"/>
+        <activity
+            android:name=".Activity.ProfileActivity"
+            android:parentActivityName=".Activity.MainActivity" />
+        <activity
+            android:name=".Activity.FindFriendActivity"
+            android:parentActivityName=".Activity.MainActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
